client: expedient view details

--- a/apps/client/src/assets/style.scss
+++ b/apps/client/src/assets/style.scss
@@ -1,5 +1,14 @@
-@import './reset';
+@import 'antd/dist/reset.css';
+@import './spacing';
+@import './flex';
 
-.ant-form-item {
-  margin-bottom: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
 }
