--- a/apps/client/src/assets/styles/main.scss
+++ b/apps/client/src/assets/styles/main.scss
@@ -4,6 +4,8 @@
 
 @use 'antd/dist/reset.css' as *;
 
+@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;600;700&display=swap");
+
 h1,
 h2,
 h3,
