--- a/apps/client/src/components/text-editor/text-editor.scss
+++ b/apps/client/src/components/text-editor/text-editor.scss
@@ -1,9 +1,8 @@
-/* Dropdown menu */
 .mention-dropdown-menu {
   background: white;
-  border: 1px solid rgba(0,0,0,0.25);
+  border: 1px solid rgba(0, 0, 0, 0.25);
   border-radius: 0.7rem;
-  box-shadow: 2px 3px 5px -1px rgba(0,0,0,0.25);
+  box-shadow: 2px 3px 5px -1px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
   gap: 0.1rem;
@@ -37,15 +36,23 @@
 .tiptap {
   min-height: 80px;
   padding: 8px;
-  border: 1px solid rgba(0,0,0,0.1);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  @at-root.dark & {
+    border: 1px solid rgba(255, 255, 255, 0.2);
+  }
+
   :first-child {
     margin-top: 0;
   }
-  &:focus-visible, &:focus {
+
+  &:focus-visible,
+  &:focus {
     outline: gray;
   }
 }
+
 .mention {
   background-color: #bae7ff;
   border-radius: 0.4rem;
