--- a/apps/api/apps/messenger/src/assets/templates/email-confirmation.hbs
+++ b/apps/api/apps/messenger/src/assets/templates/email-confirmation.hbs
@@ -47,7 +47,7 @@
                                   <a href="{{url}}"
                                     style="display:inline-block;width:150px;background:#d5b169;color:#313237;font-family:Assistant, Arial, sans-serif;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:4px;"
                                     target="_blank">
-                                    <span style="text-transform:uppercase; letter-spacing: 2px;">
+                                    <span style="text-transform:uppercase;letter-spacing: 2px;color:#313237;font-weight: bold;">
                                       Activar mi cuenta
                                     </span>
                                   </a>
