client: fix responsive details

--- a/apps/api/apps/messenger/src/assets/templates/email-confirmation.hbs
+++ b/apps/api/apps/messenger/src/assets/templates/email-confirmation.hbs
@@ -31,7 +31,7 @@
                           <td align="center" style="font-size:0px;padding:24px 16px 16px;word-break:break-word;">
                             <div
                               style="font-family:Assistant, Arial, sans-serif;font-size:16px;line-height:1;text-align:center;color:#98989a;">
-                              <strong>Ingresa al siguiente enlance y active su cuenta</strong>
+                              <strong>Ingrese al siguiente enlance y active su cuenta</strong>
                             </div>
                           </td>
                         </tr>
