--- a/apps/client/src/components/header/header-toolbar.scss
+++ b/apps/client/src/components/header/header-toolbar.scss
@@ -3,12 +3,17 @@
   display: flex;
   align-items: center;
   height: 32px;
+  width: 132px;
   border-radius: 32px;
   padding-right: 8px;
   background-color: var(--ant-color-bg-container);
+  line-height: normal;
 
   &__name {
     margin-inline: 4px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 
