--- a/apps/client/src/components/header/header-toolbar.scss
+++ b/apps/client/src/components/header/header-toolbar.scss
@@ -3,15 +3,29 @@
   display: flex;
   align-items: center;
   height: 32px;
+  width: 160px;
   border-radius: 32px;
-  padding-right: 8px;
   background-color: var(--ant-color-bg-container);
+  line-height: normal;
 
-  &__name {
-    margin-inline: 4px;
+  &__block {
+    &__avatar {
+      width: 32px;
+    }
+
+    &__name {
+      padding-inline: 4px 8px;
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: center;
+      
+      & > span:first-child {
+        width: 96px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+    }
   }
-}
-
-.abc {
-  transition: all 1.5s ease-out, background-color 1.5s ease-in;
 }
