[api] scheduled notifications

--- a/apps/api/apps/messenger/src/assets/templates/email-layout.hbs
+++ b/apps/api/apps/messenger/src/assets/templates/email-layout.hbs
@@ -113,7 +113,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:200px;">
-                                        <img alt="corporativo kallpa" height="200" src="https://scontent.faqp3-1.fna.fbcdn.net/v/t39.30808-1/225293661_107971934913452_3886101085714525842_n.png?stp=dst-png_s200x200&_nc_cat=103&ccb=1-7&_nc_sid=f4b9fd&_nc_ohc=cFYBsdIH3AQQ7kNvgGHNJp9&_nc_zt=24&_nc_ht=scontent.faqp3-1.fna&_nc_gid=ARb9BxtAevAKTvr80mj7uNa&oh=00_AYBYVTb0YScuqUjTkTbcPMy1CogceznhmUJqHIt4FwiuFg&oe=67381A07" style="border:0;display:block;outline:none;text-decoration:none;height:200;width:100%;font-size:13px;" width="200" />
+                                        <img alt="corporativo kallpa" height="200" src="https://corporativokallpa.com/images/logo.png" style="border:0;display:block;outline:none;text-decoration:none;height:200;width:100%;font-size:13px;" width="200" />
                                       </td>
                                     </tr>
                                   </tbody>
