[client] styled fix date formats

--- a/apps/client/src/assets/styles/_main.scss
+++ b/apps/client/src/assets/styles/_main.scss
@@ -9,6 +9,7 @@
 :root {
   --color-bg-layout: #{$colorBgLayoutLight};
   --color-bg-container: #{$colorBgContainerLight};
+  --color-bg-app: #{$colorBgApp};
 
   &.dark {
     --color-bg-layout: #{$colorBgLayoutDark};
