--- a/apps/client/src/assets/styles/_variables.scss
+++ b/apps/client/src/assets/styles/_variables.scss
@@ -2,3 +2,5 @@ $colorBgLayoutDark: #090909;
 $colorBgLayoutLight: #E9E9E9;
 $colorBgContainerDark: #191919;
 $colorBgContainerLight: #FBFBFB;
+
+$colorBgApp: #313237;
