--- a/apps/api/apps/messenger/src/assets/templates/scheduled-event.hbs
+++ b/apps/api/apps/messenger/src/assets/templates/scheduled-event.hbs
@@ -22,7 +22,7 @@
                               <strong>Hola {{firstName}} {{surname}}
                                 <br />
                                 <br />
-                                Tienes una notificación programada
+                                Tienes un evento programado
                               </strong>
 
                               <em>
